...
    <Button
        android:id="@+id/Notes_Button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:onClick="toNotes"
        app:layout_constraintBottom_toBottomOf="@+id/Todo_Button"
        app:layout_constraintEnd_toStartOf="@+id/Reminders_Button"
        app:layout_constraintStart_toEndOf="@+id/Todo_Button" />

    <Button
        android:id="@+id/Todo_Button"
        android:layout_width="130dp"
...
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:orientation="vertical">-->

                <TableLayout
                    android:id="@+id/recent_table"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerHorizontal="false"
                    android:stretchColumns="*"></TableLayout>
            </LinearLayout>
        </HorizontalScrollView>
...
        android:layout_marginTop="8dp"
        android:text="@string/planner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView4" />

    <Button
        android:id="@+id/addHealth"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/health"
        app:layout_constraintEnd_toStartOf="@+id/addExercise"
        app:layout_constraintStart_toEndOf="@+id/addPlanner"
        app:layout_constraintTop_toTopOf="@+id/addPlanner" />

    <Button
        android:id="@+id/addExercise"
        android:layout_width="130dp"
...
