...
        </HorizontalScrollView>


    </ScrollView>

    <Button
        android:id="@+id/add_task_button"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="5dp"
        android:text="@string/add"
...
