<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="openViewDialog"
    tools:context=".TodoActivity">

    <Button
        android:id="@+id/todo_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:onClick="toMainActivity"
        android:text="@string/home_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/upcoming_tasks_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="117dp"
        android:layout_marginRight="117dp"
        android:text="@string/upcoming_tasks"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/todo_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="2dp"
        android:onClick="toEditTaskActivity"
        android:text="@string/edit"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/todo_divider"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/todo_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/upcoming_tasks_textview" />

    <ScrollView
        android:id="@+id/todo_scrollview"
        android:layout_width="408dp"
        android:layout_height="350dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_divider">


        <HorizontalScrollView
            android:id="@+id/horiscrll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--<RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:orientation="vertical">-->

                <TableLayout
                    android:id="@+id/todo_table"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:stretchColumns="*"></TableLayout>
            </LinearLayout>
        </HorizontalScrollView>


    </ScrollView>

    <View
        android:id="@+id/todo_under_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/todo_scrollview"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/todo_complete_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:onClick="markComplete"
        android:text="@string/complete"
        app:layout_constraintBottom_toBottomOf="@+id/todo_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_scrollview" />

    <Button
        android:id="@+id/todo_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="5dp"
        android:onClick="deleteT"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/todo_add_button"
        app:layout_constraintStart_toEndOf="@+id/todo_add_button"
        app:layout_constraintTop_toBottomOf="@+id/todo_scrollview" />

    <Button
        android:id="@+id/todo_reminder_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:text="@string/reminder"
        app:layout_constraintBottom_toBottomOf="@+id/todo_add_button"
        app:layout_constraintEnd_toStartOf="@+id/todo_complete_button"
        app:layout_constraintTop_toBottomOf="@+id/todo_scrollview" />

    <Button
        android:id="@+id/todo_add_button"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="5dp"
        android:onClick="toAddTaskActivity"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_scrollview" />

    <Button
        android:id="@+id/todo_view_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:onClick="openViewDialog"
        android:text="@string/view"
        app:layout_constraintBottom_toTopOf="@+id/todo_divider"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>